# Smash-Teck

./: .gitignore  CMakeLists.txt  README.md
scene/: attack_box.txt  player.txt  sandbag.txt  scene.txt
src/: CMakeLists.txt
src/engine/: CMakeLists.txt
src/engine/include/: application.hpp  config.hpp  patterns.hpp  scene.hpp  singleton.hpp  utils.hpp
src/engine/include/ecs/: concepts.hpp  types.hpp  world.hpp
src/engine/include/ecs/inl/: types.inl  world.inl
src/engine/include/inl/: application.inl  scene.inl  singleton.inl  utils.inl
src/engine/scripts/: generate_patterns.py
src/engine/src/: application.cpp  config.cpp  main.cpp  patterns.cpp  scene.cpp
src/engine/src/ecs/: types.cpp  world.cpp
src/modules/: CMakeLists.txt
src/modules/game/: CMakeLists.txt  module.json
src/modules/game/include/components/: damage.hpp  destroy_timer.hpp  display_memory.hpp  ejectable.hpp  gravity.hpp  player.hpp  tag.hpp
src/modules/game/include/functions/: player_collisions.hpp
src/modules/game/include/systems/: destroy_timer.hpp  display_memory.hpp  ejection.hpp  gravity.hpp  player_movement.hpp
src/modules/game/src/components/: damage.cpp  destroy_timer.cpp  display_memory.cpp  ejectable.cpp  gravity.cpp  player.cpp  tag.cpp
src/modules/game/src/functions/: player_collisions.cpp
src/modules/game/src/systems/: destroy_timer.cpp  display_memory.cpp  ejection.cpp  gravity.cpp  player_movement.cpp
src/modules/render/: CMakeLists.txt  module.json
src/modules/render/include/: render_data.hpp  screen.hpp  window.hpp
src/modules/render/include/components/: animation.hpp  collision.hpp  shape.hpp  sound.hpp  text.hpp
src/modules/render/include/events/: keyboard.hpp  time.hpp
src/modules/render/include/math/: color.hpp  rect.hpp  vector2.hpp
src/modules/render/include/systems/: animation.hpp  collision.hpp  fps_display.hpp  render_shape.hpp  render_text.hpp  render_window.hpp  test_system.hpp  window_manager.hpp
src/modules/render/src/: render_data.cpp  window.cpp
src/modules/render/src/components/: animation.cpp  collision.cpp  shape.cpp  sound.cpp  text.cpp
src/modules/render/src/events/: keyboard.cpp  time.cpp
src/modules/render/src/math/: color.cpp
src/modules/render/src/systems/: animation.cpp  collision.cpp  fps_display.cpp  render_shape.cpp  render_text.cpp  render_window.cpp  test_system.cpp  window_manager.cpp
